[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/top_ui.png" type="Texture" id=1]
[ext_resource path="res://fonts/kenney_blocks.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/top_ui.gd" type="Script" id=3]
[ext_resource path="res://art/ui/progress_full.png" type="Texture" id=4]
[ext_resource path="res://art/ui/progress_empty.png" type="Texture" id=5]

[node name="top_ui" type="TextureRect"]
margin_right = 576.0
margin_bottom = 200.0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 544.0
margin_bottom = 168.0
custom_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 220.0
margin_bottom = 168.0
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "000"
align = 1

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 220.0
margin_bottom = 109.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 292.0
margin_bottom = 168.0

[node name="CounterLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 40.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "00"
align = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 127.0
margin_right = 40.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 2 )
text = "00"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 324.0
margin_right = 544.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
